# sample-fastapi-project

./: Dockerfile  LICENSE  README.md  alembic.ini  dev.db  isort.toml  mypy.ini  pyproject.toml
app/: di.py  main.py
app/controllers/: user_controller.py
app/core/: settings.py
app/db/: db_context.py  db_context_factory.py
app/dependencies/: service_collection.py
app/infrastructure/db/: db_context.py  db_context_factory.py  db_set.py  isolation_level.py
app/infrastructure/models/: __init__.py  user.py
app/infrastructure/security/: password_manager.py
app/infrastructure/services/: user_service.py
app/middlewares/: permissions.py
app/models/: __init__.py  user.py
app/presentation/: di.py  main.py  settings.py
app/presentation/controllers/: user_controller.py
app/presentation/middlewares/: permissions.py
app/presentation/schemas/: user.py
app/schemas/: user.py
app/services/: user_service.py
config/: development.appsettings.json
migrations/: env.py
migrations/versions/: 2025_02_12_0600-7f5cfc3cdd30_init.py
settings/: development.appsettings.json
